--- a/charts/satisfactory/values.yaml
+++ b/charts/satisfactory/values.yaml
@@ -8,6 +8,7 @@ image:
 
 config:
   maxPlayers: 8
+  debug: false
   crashReport: true
   steamBeta: false
   skipUpdate: false
@@ -33,7 +34,7 @@ service:
 
 persistence:
   enabled: true
-  size: 10Gi
+  size: 50Gi
   existingClaim: ""
 
 podSecurityContext:
